# HRKit

./: .gitignore  AGENTS_SPEC.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  TRADEMARK.md  USER-MANUAL.md  WEBSITE_SPEC.md  pyproject.toml  scan-hrkit.bat  start-hrkit.bat
.github/: pull_request_template.md
cli/: .npmignore  README.md  package.json
docs/: AI-CHAT.md  ARCHITECTURE.md  INSTALL.md  INTEGRATIONS.md  QUICKSTART.md  README.md  RECIPES.md  RELEASING.md  ROADMAP.md
hrkit/: README.md  __init__.py  __main__.py  ai.py  ai_tools.py  artifacts.py  branding.py  chat.py  chat_storage.py  cli.py  composio_client.py  composio_sdk.py  config.py  db.py  employee_fs.py  evaluator.py  feature_flags.py  frontmatter.py  hiring_migrator.py  integrations_ui.py  migrate.py  migration_runner.py  models.py  recipes.py  recipes_ui.py  sandbox.py  scanner.py  seeds.py  server.py  settings_ui.py  templates.py  uploads.py  wizard.py
tests/: conftest.py  test_ai_gating.py  test_ai_guardrails.py  test_ai_http.py  test_ai_tools.py  test_approval.py  test_attendance.py  test_chat_composio_tools.py  test_chat_project_sync.py  test_composio_sdk.py  test_config.py  test_csv_import_export.py  test_department.py  test_document.py  test_employee.py  test_employee_fs.py  test_evaluator.py  test_exit_record.py  test_integrations.py  test_integrations_ui.py  test_leave.py  test_mirror.py  test_onboarding.py  test_payroll.py  test_performance.py  test_phase111_custom.py  test_phase11_wiring.py  test_phase16_18_19.py  test_recruitment.py  test_recruitment_pull_emails.py  test_role.py  test_seeds.py  (+8 more)
(+80 files in other folders)
